--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,13 +20,12 @@ services:
       retries: 5
 
   webserver:
-    image: nginx:1.26.0-alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.prod.nginx
     container_name: nginx
     ports:
       - "8081:80"
-    volumes:
-      - ./:/var/www
-      - ./nginx/conf.d:/etc/nginx/conf.d
     depends_on:
       - app
     networks:
