--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   app:
     build:
@@ -7,8 +9,6 @@ services:
     working_dir: /var/www
     networks:
       - laravel
-    env_file:
-      - .env
     environment:
       - NODE_ENV=production
     depends_on:
@@ -24,14 +24,14 @@ services:
       context: .
       dockerfile: Dockerfile.prod.nginx
     container_name: nginx
-    volumes:
-      - ./:/var/www
     ports:
       - "8081:80"
     depends_on:
       - app
     networks:
       - laravel
+    volumes:
+      - ./:/var/www # Assurez-vous que le code de l'application est monté dans le conteneur Nginx
 
   db:
     image: mariadb:latest
