--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,38 +1,40 @@
-version: '3.8'
-
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile.prod
-    container_name: laravel_app_prod
-    restart: unless-stopped
-    env_file:
-      - .env
-    volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro  # Montage du fichier de configuration Nginx
-      - .:/var/www  # Montage du code de l'application Laravel
+    container_name: laravel_app
+    working_dir: /var/www
     networks:
       - laravel
+    env_file:
+      - .env
+    environment:
+      - NODE_ENV=production
     depends_on:
       - db
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   webserver:
     image: nginx:1.26.0-alpine
-    container_name: nginx_prod
-    restart: unless-stopped
+    container_name: nginx
+    ports:
+      - "8081:80"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro  # Montage du fichier de configuration Nginx
-      - .:/var/www:ro  # Montage du code de l'application Laravel en lecture seule
+      - ./:/var/www
+      - ./nginx/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - app
     networks:
       - laravel
-    ports:
-      - "8081:80"  # Port pour accéder à l'application via Nginx
 
   db:
     image: mariadb:latest
-    container_name: mariadb_prod
-    restart: unless-stopped
+    container_name: mariadb
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DB_DATABASE}
@@ -40,18 +42,26 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
       - dbdata:/var/lib/mysql
+    ports:
+      - "3307:3306"
     networks:
       - laravel
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u ${DB_USERNAME} -p${DB_PASSWORD} || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin_prod
-    restart: unless-stopped
+    container_name: phpmyadmin
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     ports:
       - "8082:80"
+    depends_on:
+      - db
     networks:
       - laravel
 
