--- a/.github/workflows/laravel-tests.yml
+++ b/.github/workflows/laravel-tests.yml
@@ -18,13 +18,15 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: laravel
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
         ports:
           - 3306:3306
         options: >-
-          --health-cmd "mysqladmin ping --silent"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 3
+          --health-cmd="mysqladmin ping -h localhost -u user -ppassword || exit 1"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
 
     steps:
       - name: Checkout repository
@@ -33,7 +35,7 @@ jobs:
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3' # Change this to the PHP version your project uses
+          php-version: '8.3'
           extensions: mbstring, intl, bcmath, gd, mysqli, pdo_mysql
           coverage: none
 
@@ -41,7 +43,7 @@ jobs:
         run: composer install --prefer-dist --no-progress --no-suggest --no-interaction
 
       - name: Install npm dependencies
-        run: npm i
+        run: npm install
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
@@ -52,14 +54,17 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate
 
+      - name: Wait for MySQL to be ready
+        run: dockerize -wait tcp://mysql:3306 -timeout 1m
+
       - name: Run migrations
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan migrate --force
 
       - name: Run seeder category
@@ -68,8 +73,8 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan db:seed --class=CategoriesSeeder
 
       - name: Run seeder entreprise
@@ -78,8 +83,8 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan db:seed --class=EntreprisesSeeder
 
       - name: Run seeder groups
@@ -88,8 +93,8 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan db:seed --class=GroupesSeeder
 
       - name: Run seeder questions
@@ -98,8 +103,8 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan db:seed --class=QuestionsSeeder
 
       - name: Run seeder response
@@ -108,8 +113,8 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan db:seed --class=ReponsesSeeder
 
       - name: Run tests
@@ -118,6 +123,6 @@ jobs:
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DB_DATABASE: laravel
-          DB_USERNAME: root
-          DB_PASSWORD: root
+          DB_USERNAME: user
+          DB_PASSWORD: password
         run: php artisan test
