--- a/.github/workflows/ValidationAndUpdate.yml
+++ b/.github/workflows/ValidationAndUpdate.yml
@@ -15,7 +15,6 @@ jobs:
         id: pr_info
         run: |
           echo "::set-output name=title::$(jq -r '.pull_request.title' $GITHUB_EVENT_PATH)"
-
       - name: Validate PR title
         run: |
           title="${{ steps.pr_info.outputs.title }}"
@@ -27,7 +26,6 @@ jobs:
             echo "Veuillez inclure l'un de ces mots-clés dans le titre de votre Pull Request."
             exit 1
           fi
-
   update_version:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize')
@@ -41,7 +39,7 @@ jobs:
       - name: Extract version from last PR title
         id: extract_version
         run: |
-          latest_pr_data=$(curl -s -H "Authorization: token ${{ secrets.MY_SECRET_TOKEN }}" "https://api.github.com/repos/JohannDietrichGitHub/groupe-8-Devops/pulls?state=closed&sort=updated&direction=desc&per_page=100")
+          latest_pr_data=$(curl -s -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" "https://api.github.com/repos/JohannDietrichGitHub/groupe-8-Devops/pulls?state=closed&sort=updated&direction=desc&per_page=100")
           
           # Vérifier si la réponse est vide ou non
           if [[ -z "$latest_pr_data" ]]; then
@@ -77,7 +75,6 @@ jobs:
         run: |
           echo "::set-output name=title::$(jq -r '.pull_request.title' $GITHUB_EVENT_PATH)"
           echo "::set-output name=labels::$(jq -r '.pull_request.labels[].name' $GITHUB_EVENT_PATH)"
-
       - name: Update version and PR title
         run: |
           # Récupérer le titre de la PR et les labels
@@ -86,7 +83,6 @@ jobs:
           
           # Récupérer la dernière version de la PR
           version="${{ steps.extract_version.outputs.version }}"
-
           # Écrire la version dans un fichier de sortie
           echo "$version" > version.txt
         continue-on-error: true
@@ -105,13 +101,11 @@ jobs:
           elif [[ $title == *"Patch"* ]]; then
               version=$(echo $version | awk -F. '{$3++} 1' OFS=.)
           fi
-
           # Mettre à jour le titre de la PR avec la nouvelle version
           new_title="${version} - ${title}"
           
           # Enregistrer la nouvelle valeur de new_title dans un fichier de sortie
           echo "$new_title" > new_title.txt
-
       - name: Update PR title
         run: |
           # Lire la nouvelle valeur de new_title depuis le fichier de sortie
@@ -122,7 +116,7 @@ jobs:
           
           # Mettre à jour le titre de la PR via l'API GitHub
           curl -X PATCH \
-            -H "Authorization: token ${{ secrets.MY_SECRET_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.MY_GITHUB_TOKEN }}" \
             -H "Content-Type: application/json" \
             -d "{\"title\": \"$new_title\"}" \
             "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}"
