--- a/.github/workflows/PRTest.yml
+++ b/.github/workflows/PRTest.yml
@@ -117,5 +117,22 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{\"title\": \"$new_title\"}" \
             "https://api.github.com/repos/${{ github.repository }}/pulls/${pr_number}"
-          git commit -m "Update version to ${{ steps.extract_version.outputs.version }}"
+
+      - name: Update .env.exemple with new version
+        run: |
+          # Lire la version depuis le fichier de sortie
+          version=$(cat version.txt)
+
+          # Remplacer ou ajouter la variable APP_VERSION dans le fichier .env.exemple
+          if grep -q "^APP_VERSION=" .env.exemple; then
+            sed -i "s/^APP_VERSION=.*/APP_VERSION=$version/" .env.exemple
+          else
+            echo "APP_VERSION=$version" >> .env.exemple
+          fi
+
+          # Committer et pousser les modifications
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .env.exemple
+          git commit -m "Update APP_VERSION to $version"
           git push origin ${{ github.base_ref }}
