--- a/.github/workflows/PRTest.yml
+++ b/.github/workflows/PRTest.yml
@@ -123,6 +123,11 @@ jobs:
           # Lire la version depuis le fichier de sortie
           version=$(cat version.txt)
 
+          # Vérifier si le fichier .env.exemple existe dans le répertoire du projet
+          if [ ! -f .env.exemple ]; then
+            touch .env.exemple
+          fi
+
           # Remplacer ou ajouter la variable APP_VERSION dans le fichier .env.exemple
           if grep -q "^APP_VERSION=" .env.exemple; then
             sed -i "s/^APP_VERSION=.*/APP_VERSION=$version/" .env.exemple
@@ -135,4 +140,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .env.exemple
           git commit -m "Update APP_VERSION to $version"
-          git push origin ${{ github.base_ref }}
+          git push origin ${{ github.ref_name }}
