--- a/.github/workflows/PRTest.yml
+++ b/.github/workflows/PRTest.yml
@@ -140,4 +140,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .env.exemple
           git commit -m "Update APP_VERSION to $version"
-          git push origin ${{ github.ref_name }}
+          git push origin ${{ github.head_ref }}
